# atomic

./: .gitignore  CHANGELOG.md  README.md  SHIP-READINESS.md  cloud.dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: cloud-image.yml
crates/atomic-cloud/: Cargo.toml  DEPLOY.md  README.md  TESTING.md
crates/atomic-cloud/frontend/: README.md  package-lock.json  package.json  vite.config.ts
crates/atomic-cloud/frontend/src/: App.tsx
crates/atomic-cloud/frontend/src/components/: SiteFooter.tsx
crates/atomic-cloud/frontend/src/components/account/: BillingBanner.tsx
crates/atomic-cloud/frontend/src/components/ui/: index.ts
crates/atomic-cloud/frontend/src/lib/: api.ts  billing.test.ts  billing.ts  host.ts  models.ts
crates/atomic-cloud/frontend/src/pages/: AccountShell.tsx  Admin.tsx  Legal.tsx  Login.test.tsx  Login.tsx  Signup.test.tsx  Signup.tsx
crates/atomic-cloud/frontend/src/pages/account/: AccountShell.tsx  Billing.tsx  Provider.tsx
crates/atomic-cloud/migrations/: 002_magic_links.sql
crates/atomic-cloud/src/: account_cache.rs  account_plane.rs  auth.rs  backpressure.rs  backup.rs  backup_store.rs  backups.rs  billing.rs  billing_guard.rs  billing_routes.rs  chat_streams.rs  control_plane.rs  curated_models.rs  demo_plane.rs  deploy.rs  dispatcher.rs  email.rs  error.rs  export_plane.rs  fleet_migration.rs  keyvault.rs  lib.rs  magic_links.rs  main.rs  managed_keys.rs  metrics.rs  oauth_routes.rs  oauth_store.rs  pools.rs  provider_config.rs  provider_credentials.rs  provision.rs  provisioning_api.rs  quota.rs  rate_limit.rs  reaper.rs  reserved_subdomains.rs  server.rs  spa.rs  tenant_plane.rs  (+1 more)
crates/atomic-cloud/src/billing/: dunning.rs
crates/atomic-cloud/tests/: account_cache.rs  account_plane.rs  backpressure.rs  backup.rs  cloud_auth.rs  control_plane.rs  demo_plane_e2e.rs  deploy_gating.rs  dispatch_hints.rs  dispatcher.rs  e2e_backup.rs  e2e_billing.rs  e2e_cloud.rs  e2e_deploy.rs  e2e_dispatcher.rs  e2e_oauth.rs  fleet_migration.rs  magic_links.rs  managed_keys.rs  migration_lint.rs  oauth_store.rs  provider_credentials.rs  provider_routes.rs  provisioning.rs  quota_billing.rs  reaper.rs  spa_serving.rs  tokens.rs
crates/atomic-cloud/tests/support/: mod.rs
crates/atomic-core/: Cargo.toml
crates/atomic-server/: Cargo.toml
deploy/: .env.example  MONITORING.md  README.md  docker-compose.yml
deploy/alloy/: config.alloy
deploy/grafana/: atomic-cloud-dashboard.json
deploy/scripts/: deploy.sh  provision.sh
docs/: README.md
docs/plans/: 2026-04-30-tag-accordion-scroll-issue.md  2026-04-30-wiki-generate-update-heading-mismatch.md  atomic-cloud-scaling.md  atomic-cloud.md  demo-instance.md  durable-task-runs.md  frontend-health-audit.md  knowledge-quality-signals.md
docs/research/: memory-retention-audit.md
scripts/: cloud-dev.sh
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/: api.ts
src/router/: RouterBridge.tsx  routes.ts
src/stores/: atoms.ts  (+6 more)
(+235 files in other folders)
