[package]
name = "atomic-cloud"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant cloud composition layer for Atomic (Postgres, database-per-account)"
license = "MIT"

[lib]
name = "atomic_cloud"
path = "src/lib.rs"

[[bin]]
name = "atomic-cloud"
path = "src/main.rs"

[dependencies]
# The crates this one composes. Dependency arrow is strictly one-way:
# atomic-cloud → atomic-server → atomic-core (see docs/plans/atomic-cloud.md).
atomic-server = { path = "../atomic-server" }
atomic-core = { path = "../atomic-core", features = ["postgres"] }

# Web framework — same major as atomic-server so middleware composes.
actix-web = "4.9"

# Database — version/features match atomic-core's postgres feature exactly,
# plus `chrono` for TIMESTAMPTZ decode on control-plane rows.
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"

# Control-plane primitives — versions match the rest of the workspace.
chrono = "0.4"
data-encoding = "2"     # base32 tenant-database names; hex token hashes
rand = "0.8"            # OsRng for token/session secrets
sha2 = "0.10"           # SHA-256 token/session hashing
url = "2"               # tenant-database URL construction
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# `FutureExt::catch_unwind` powers the test-database cleanup guard.
futures = "0.3"
